# OneArgo-Python-Dev

./: .gitignore  LICENSE  README.md  argo_config.json  meta.yaml  pyproject.toml  setup.py
oneargopy/: Argo.py  Settings.py  __init__.py  argo.py  argo_config.json  initialize.py  setup_functions.py  test_initialize.py
src/oneargopy/: Argo.py  __init__.py
tests/: test_initialize.py
