[build-system]
requires = [
    "setuptools>=61.0",
    "pathlib",
    "requests",
    "datetime",
    "numpy",
    "matplotlib",
    "pandas",
    "cartopy",
    "netCDF4" ]
build-backend = "setuptools.build_meta"

[project]
name = "oneargopy"
version = "0.0.4"
authors = [
  { name="Savannah Stephenson", email="stephensonsavannah@ymail.com" },
  { name="Hartmut Frenzel", email="hartmut.frenzel@noaa.gov" },
]
description = "A beta version of oneargopy to test packaging with pip."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lovelysandlonelys/OneArgo-Python-Dev"
Issues = "https://github.com/lovelysandlonelys/OneArgo-Python-Dev/issues"